// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(2) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-128 {
  height: auto;
}

.emotion-127 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-127 tr {
  background-color: #252525;
}

.emotion-127 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-127 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-127 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-127 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-127 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-127 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-127 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-127 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-127 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-28 {
  cursor: pointer;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17 {
  text-align: center;
}

.emotion-19 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 8px;
  font-weight: 700;
  font-size: 15px;
  line-height: 19px;
  border-radius: 32px;
  color: #c92300;
  background-color: #191919;
}

.emotion-19:hover {
  border: 2px solid #808080;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-20 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-20:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-20:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-21 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-21:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-21:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-23 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-23:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-23:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-27 {
  position: relative;
}

.emotion-26 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-26:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-26[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-26:hover {
  color: #ffffff !important;
  background-color: #808080;
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #b3b3b3;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-37 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #4a90e2;
}

.emotion-37:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-37:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-43 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4ac565;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-49 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #4ac565;
}

.emotion-49:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-49:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-50 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #4a90e2;
}

.emotion-50:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-50:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-54 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4a4a4a;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-63 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-74 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #191919;
  background-color: #ebb52e;
  font-family: Roboto Condensed;
}

.emotion-89 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-89:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-89:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-128"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Jobs
        : 
        11
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <table
      className="emotion-127"
    >
      <thead>
        <tr>
          <th
            className="emotion-6"
          >
            Status
          </th>
          <th
            className="emotion-6"
          >
            Job Name
          </th>
          <th
            className="emotion-6"
          >
            Priority
          </th>
          <th
            className="emotion-6"
          >
            Created
          </th>
          <th
            className="emotion-6"
          >
            # Assets
          </th>
          <th
            className="emotion-6"
          >
            Errors
          </th>
          <th
            className="emotion-6"
          >
            Task Progress
          </th>
          <th
            className="emotion-6"
          >
            <div
              className="emotion-13"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-15"
            >
              In Progress
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-22"
                />
                <div
                  className="emotion-23"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-27"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-26"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-29"
            >
              Cancelled
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-22"
                />
                <div
                  className="emotion-37"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-27"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-26"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-11-07 01:36:29
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-49"
                />
                <div
                  className="emotion-50"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-54"
            >
              Archived
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-11-07 01:35:36
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-63"
            >
              Failure
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-10-11 21:11:03
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-27"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-26"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-74"
            >
              Paused
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-10-11 21:03:27
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-27"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-26"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              flipbook_export_1
            </a>
          </td>
          <td
            className="emotion-17"
          >
            1
          </td>
          <td>
            2019-08-01 22:52:19
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-89"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019
            </a>
          </td>
          <td
            className="emotion-17"
          >
            1
          </td>
          <td>
            2019-07-08 18:53:44
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019___
            </a>
          </td>
          <td
            className="emotion-17"
          >
            1
          </td>
          <td>
            2019-07-08 18:43:03
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-07-03 16:49:15
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-28"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-43"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-16"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-17"
          >
            100
          </td>
          <td>
            2019-07-03 01:29:41
          </td>
          <td
            className="emotion-17"
          >
            4
          </td>
          <td>
            <a
              className="emotion-19"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              !
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-25"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-24"
              >
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-89"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-19 {
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-18 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-18 tr {
  background-color: #252525;
}

.emotion-18 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-18 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-18 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-18 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-18 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-18 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-18 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-18 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-18 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(2) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  height: 100%;
  pointer-events: none;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-19"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Jobs
        : 
        0
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <table
      className="emotion-18"
    >
      <thead>
        <tr>
          <th
            className="emotion-6"
          >
            Status
          </th>
          <th
            className="emotion-6"
          >
            Job Name
          </th>
          <th
            className="emotion-6"
          >
            Priority
          </th>
          <th
            className="emotion-6"
          >
            Created
          </th>
          <th
            className="emotion-6"
          >
            # Assets
          </th>
          <th
            className="emotion-6"
          >
            Errors
          </th>
          <th
            className="emotion-6"
          >
            Task Progress
          </th>
          <th
            className="emotion-6"
          >
            <div
              className="emotion-13"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-17"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-16"
            >
              <div
                className="emotion-15"
              >
                <svg
                  data-file-name="noJobs.svg"
                  width={200}
                />
                <div>
                  There are currently no jobs in the queue.
                </div>
                <div>
                  Any new job will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
